--- a/simulator/build.gradle
+++ b/simulator/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'application'
+
+application {
+    mainClassName = project.hasProperty("mainClass") ? getProperty("mainClass") : "NULL"
+}
+
 dependencies {
     implementation(project(":minigl"))
 
