--- a/minigl/build.gradle
+++ b/minigl/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'kotlin'
 apply plugin: 'application'
 
 application {
-    mainClassName = project.hasProperty("mainClass") ? getProperty("mainClass") : "NULL"
+    mainClass.set(project.hasProperty("mainClass") ?
+            (String) project.property("mainClass") : "com.gzozulin.minigl.techniques.PhysicsKt")
 }
 
 project.ext.lwjglVersion = "3.0.0a"
