miniui proj added

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
-rootProject.name='blasterV2'
+rootProject.name = 'blasterV2'
 include ':app'
 include ':minigl'
+include ':miniui'
 include ':simulator'
