--- a/minigl/build.gradle
+++ b/minigl/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     implementation "org.lwjgl:lwjgl-platform:${lwjglVersion}:natives-linux"
     implementation "org.lwjgl:lwjgl-platform:${lwjglVersion}:natives-osx"
 
+    implementation group: 'org.lwjgl', name: 'lwjgl-stb', version: '3.1.1'
+
     api "org.joml:joml:1.9.19"
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
