--- a/minigl/build.gradle
+++ b/minigl/build.gradle
@@ -2,25 +2,52 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
+// Created with configurator: https://www.lwjgl.org/customize
+
+import org.gradle.internal.os.OperatingSystem
+
+switch (OperatingSystem.current()) {
+    case OperatingSystem.LINUX:
+        project.ext.lwjglNatives = "natives-linux"
+        break
+    case OperatingSystem.WINDOWS:
+        project.ext.lwjglNatives = "natives-windows"
+        break
+}
+
+repositories {
+    mavenCentral()
+}
+
 application {
     mainClass.set(project.hasProperty("mainClass") ?
             (String) project.property("mainClass") : "com.gzozulin.minigl.techniques.PhysicsKt")
 }
 
-project.ext.lwjglVersion = "3.0.0a"
+project.ext.lwjglVersion = "3.2.3"
+project.ext.jomlVersion = "1.9.25"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation "org.lwjgl:lwjgl:${lwjglVersion}"
-    implementation "org.lwjgl:lwjgl-platform:${lwjglVersion}:natives-windows"
-    implementation "org.lwjgl:lwjgl-platform:${lwjglVersion}:natives-linux"
-    implementation "org.lwjgl:lwjgl-platform:${lwjglVersion}:natives-osx"
+    api platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
-    api "org.joml:joml:1.9.19"
+    api "org.lwjgl:lwjgl"
+    api "org.lwjgl:lwjgl-assimp"
+    api "org.lwjgl:lwjgl-glfw"
+    api "org.lwjgl:lwjgl-openal"
+    api "org.lwjgl:lwjgl-opengl"
+    api "org.lwjgl:lwjgl-stb"
+    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-assimp::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-openal::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
+    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"
+    api "org.joml:joml:${jomlVersion}"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
 }
 
 sourceCompatibility = "7"
