--- a/rider/build.gradle
+++ b/rider/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'application'
 
 application {
-    mainClass.set(project.hasProperty("mainClass") ?
-            (String) project.property("mainClass") : "com.gzozulin.sim.simulation.SoccerKt")
+    //mainClass.set(project.hasProperty("mainClass") ?
+      //      (String) project.property("mainClass") : "com.gzozulin.sim.simulation.SoccerKt")
 }
 
 dependencies {
@@ -16,3 +16,11 @@ dependencies {
 
 sourceCompatibility = "7"
 targetCompatibility = "7"
+
+configure([compileKotlin, compileTestKotlin]) {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
+
