--- a/minigl/build.gradle
+++ b/minigl/build.gradle
@@ -29,7 +29,10 @@ project.ext.jomlVersion = "1.9.25"
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
+    api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 
     api platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
 
@@ -48,7 +51,16 @@ dependencies {
     api "org.joml:joml:${jomlVersion}"
 
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
+
+    api 'org.kodein.di:kodein-di:7.1.0'
 }
 
 sourceCompatibility = "7"
 targetCompatibility = "7"
+
+
+configure([compileKotlin, compileTestKotlin]) {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
