--- a/simulator/build.gradle
+++ b/simulator/build.gradle
@@ -16,3 +16,10 @@ dependencies {
 
 sourceCompatibility = "7"
 targetCompatibility = "7"
+
+configure([compileKotlin, compileTestKotlin]) {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
