--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        kotlin_version = '1.4.10'
+        ktlint_version = '0.29.0'
+
+        coroutine_version = '1.3.9'
+        coroutines_test_version = '1.3.9'
+
+        junit_version = '4.13'
+
+        hamcrest_version = "1.3"
+    }
     repositories {
         google()
         jcenter()
