--- a/minigl/build.gradle
+++ b/minigl/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    testImplementation "junit:junit:$rootProject.junit_version"
+    testImplementation "org.hamcrest:hamcrest-library:$hamcrest_version"
+
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3'
     api 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3'
 
