--- a/shaderlang/CMakeLists.txt
+++ b/shaderlang/CMakeLists.txt
@@ -3,4 +3,7 @@ project(shaderlang C)
 
 set(CMAKE_C_STANDARD 11)
 
+# add_compile_options(-Wall -Wextra -pedantic)
+# add_compile_options(-Wall -Wextra -pedantic -Werror)
+
 add_executable(shaderlang main.c)
