--- a/shaderlang/CMakeLists.txt
+++ b/shaderlang/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.19)
-project(shaderlang C)
+project(shadergen C)
 
 set(CMAKE_C_STANDARD 11)
 
 # add_compile_options(-Wall -Wextra -pedantic)
 # add_compile_options(-Wall -Wextra -pedantic -Werror)
 
-add_executable(shaderlang main.c)
+add_executable(shadergen main.c)
+target_link_libraries(shadergen m)
