--- a/minigl/build.gradle
+++ b/minigl/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.3"
 
     api 'org.kodein.di:kodein-di:7.1.0'
+
+    implementation group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.5'
 }
 
 sourceCompatibility = "7"
