--- a/antlr/build.gradle
+++ b/antlr/build.gradle
@@ -1,19 +1,16 @@
 apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'application'
 
 dependencies {
-    implementation(project(":antlr"))
+    api(project(":minigl"))
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "org.antlr:antlr4:4.9.1"
     implementation group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.5'
-}
 
-application {
-    mainClass = 'com.gzozulin.gen.ShaderGenKt'
+    api "org.antlr:antlr4:4.9.1"
 }
 
 sourceCompatibility = "7"
