--- a/shaderlang/CMakeLists.txt
+++ b/shaderlang/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_C_STANDARD 11)
 # add_compile_options(-Wall -Wextra -pedantic)
 add_compile_options(-Wall -Wextra -pedantic -Werror)
 
+include_directories(cglm/include)
+
 add_executable(shadergen main.c)
 target_link_libraries(shadergen m)
